bk_ida/gccida/g1/purge_line_number_notes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:618:4: error: expected ';' after expression
rtx v2; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:618:5: error: use of undeclared identifier 'v2'
rtx v2; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:624:1: error: use of undeclared identifier 'v2'
v2 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:632:1: error: use of undeclared identifier 'v2'
v2 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:636:6: error: use of undeclared identifier 'v2'
if ( v2 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:638:16: error: use of undeclared identifier 'v2'
if ( rtx[2] == v2[2] ) 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:640:15: error: use of undeclared identifier 'v2'
if ( rtint == v2[2].fld[0].rtint ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:643:1: error: use of undeclared identifier 'v2'
v2 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:647:1: error: use of undeclared identifier 'v2'
v2 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/jump.c:652:1: error: use of undeclared identifier 'v2'
v2 = rtx; 
^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/purge_line_number_notes/src/obj/jump.o] Error 1
